# efxclipse-drift

./: .travis.yml  pom.xml
.azure-pipelines/: build-unix.sh  build-win32.sh  test.yml
native/: CMakeLists.txt
native/DriftFX/: CMakeLists.txt
native/lib/glew/: CMakeLists.txt
native/lib/utils/: CMakeLists.txt
native/lib/utils/include/utils/: JNIHelper.h  Logger.h
native/samples/: CMakeLists.txt  SimpleColorRenderer.cpp
org.eclipse.fx.drift/: pom.xml
org.eclipse.fx.drift.azuredist/: pom.xml
org.eclipse.fx.drift.azuredist/assembly/: dist.xml  sources.xml
org.eclipse.fx.drift.native.linux/: pom.xml
org.eclipse.fx.drift.native.linux.debug/: pom.xml
org.eclipse.fx.drift.native.macos/: pom.xml
org.eclipse.fx.drift.native.macos.debug/: pom.xml
org.eclipse.fx.drift.native.win32/: pom.xml
org.eclipse.fx.drift.native.win32.debug/: pom.xml
org.eclipse.fx.drift.samples/: pom.xml
org.eclipse.fx.drift.samples/src-native/: CMakeLists.txt  SimpleColorRenderer.cpp  SimpleTriangleRenderer.cpp
org.eclipse.fx.drift/src-native/: CMakeLists.txt
org.eclipse.fx.drift/src-native/DriftFX/: CMakeLists.txt
org.eclipse.fx.drift/src-native/DriftFX/include/DriftFX/: Common.h
org.eclipse.fx.drift/src-native/DriftFX/include/DriftFX/GL/: GLTexture.h
org.eclipse.fx.drift/src-native/DriftFX/src/gl/: GL.cpp
org.eclipse.fx.drift/src-native/DriftFX/src/prism/d3d/: D3DNativeSurface.cpp
org.eclipse.fx.drift/src-native/DriftFX/src/prism/es2/glx/: GLXSharedTexture.h
org.eclipse.fx.drift/src-native/cmake/: FindWindowsSDK.cmake
org.eclipse.fx.drift/src-native/lib/glew/: CMakeLists.txt
org.eclipse.fx.drift/src-native/lib/utils/: CMakeLists.txt
org.eclipse.fx.drift/src-native/lib/utils/include/utils/: JNIHelper.h  Logger.h
org.eclipse.fx.drift/src-native/lib/utils/src/: JNIHelper.cpp  Logger.cpp
tools/: install_cmake_macos.sh
